# C-Chat

./: .env  .gitignore  C-Chat_Architecture_Documentation.docx  CMakeLists.txt  High-Level_Architecture_Diagram.drawio  Main-Server_connection.drawio  Makefile  README.md  compile.sh
Software Design/: High-Level_Architecture_Diagram.drawio  Main Application Client.md  Main Application Server.md  User-Database.md
db/: init_db.sql
include/: client.h  color_log.h  databaseMySQL.h  dbSql.h  file.h  group.h  message.h  server.h  server_utils.h  user.h
src/: client.c  database.c  db.c  main  main.c  server.c  server_commands.c  server_network.c
src/group/: group.c
src/server/: server_commands.c  server_network.c  server_utils.c
